<resources>
    <string name="app_name">AndroidJava</string>
    <string name="default_web_client_id">344452612993-0jogj0qfhll8m8t682je7eh587p5392k.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SignUp">Sign Up</string>
    <string name="email">Enter your email or username</string>
    <string name="pass">Enter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_has_account">Already has account ?</string>
    <string name="login">Login</string>
    <string name="or_sign_up_with">Or Sign Up With</string>
    <string name="Login">Login</string>
    <string name="or_login_with">Or Login with</string>
    <string name="categories">Categories</string>
    <string name="countries">Countries</string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="dishes">Dishes</string>
    <string name="ingredients">Ingredients:</string>
    <string name="steps">Steps:</string>
    <string name="description">Description</string>
    <string name="area">Area :</string>
    <string name="areaa">Area:</string>
    <string name="content_description_search">content_description_search</string>
    <string name="search">Search</string>
    <string name="home">home</string>
    <string name="plan">plan</string>
    <string name="favorites">favorites</string>
    <string name="search_icon">Search</string>
    <string name="Plan">Plan</string>
    <string name="Home">Home</string>
    <string name="settings">settings</string>
    <string name="search_by_meal">Search by meal...</string>
    <string name="add_meal_to_favorites_to_save_it">Add meal to favorites to save it !</string>
    <string name="favorites_meals">Favorites Meals</string>
    <string name="foodienator">Foodienator</string>
    <string name="your_favorite_meals_here">your favorite meals here!</string>
    <string name="ingredientsChip">Ingredients</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="hungry_plan">Hungry Plan</string>
    <string name="area2">.area2</string>
    <string name="searchT">Search..</string>
    <string name="hungry_planTxt">Hungry Plan</string>
    <string name="ingredient_image">Ingredient Image</string>
    <string name="ingredient_title">Ingredient Title</string>
</resources>