<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="200dp"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="220dp"
            android:layout_gravity="center_horizontal"

            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            app:cardBackgroundColor="@color/SoftPink"
            app:cardCornerRadius="30dp"
            app:cardElevation="5dp">

            <ImageView
                android:id="@+id/mealImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/mealName"
            style="@style/bigTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="Title" />

        <TextView
            style="@style/bigTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingTop="10dp"
            android:text="@string/areaa"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="10dp"
            android:fontFamily="monospace"
            android:paddingTop="10dp"
            android:text=".area2"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            style="@style/bigTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/ingredients"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:listitem="@layout/ingredient_item" />


        <TextView
            style="@style/bigTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/steps"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="10dp"
            android:fontFamily="monospace"
            android:paddingTop="10dp"
            android:text="............."
            android:textSize="16sp"
            android:textStyle="bold" />


        <WebView
            android:id="@+id/mealVideo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            tools:layout_editor_absolutX="9dp"
            tools:layout_editor_absolutY="9dp" />

    </LinearLayout>

</ScrollView>
